updated UI, implemented Glide > Picasso, added search bar validation

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/searchScreenFragment"
         android:name="com.example.jeff.iplocator.view.SearchScreenFragment"
-        android:label="search_screen_fragment"
-        tools:layout="@layout/search_screen_fragment" >
+        android:label="Search"
+        tools:layout="@layout/search_screen_fragment">
         <action
             android:id="@+id/action_searchScreenFragment_to_aboutScreenFragment"
             app:destination="@id/aboutScreenFragment" />
@@ -17,8 +17,8 @@
     <fragment
         android:id="@+id/aboutScreenFragment"
         android:name="com.example.jeff.iplocator.view.AboutScreenFragment"
-        android:label="about_screen_fragment"
-        tools:layout="@layout/about_screen_fragment" >
+        android:label="About"
+        tools:layout="@layout/about_screen_fragment">
         <action
             android:id="@+id/action_aboutScreenFragment_to_searchScreenFragment"
             app:destination="@id/searchScreenFragment" />
