--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -6,7 +6,8 @@
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView" ></item>
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always"></item>
     <item
         android:id="@+id/app_bar_about"
         android:title="@string/about" />
