--- a/app/src/main/res/layout/about_screen_fragment.xml
+++ b/app/src/main/res/layout/about_screen_fragment.xml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
+    android:orientation="vertical"
     tools:context=".view.AboutScreenFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
 
-</FrameLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/location_info_cardview"
+            style="@style/Widget.MaterialComponents.CardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:elevation="2dp"
+            app:cardCornerRadius="4dp">
+
+            <TextView
+                android:id="@+id/about_ipdata_textview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/about_ipdata"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/educational_cardview"
+            style="@style/Widget.MaterialComponents.CardView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:elevation="2dp"
+            app:cardCornerRadius="4dp">
+
+            <TextView
+                android:id="@+id/educational_textview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/education_use_only"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        </com.google.android.material.card.MaterialCardView>
+
+
+
+</LinearLayout>
