--- a/app/src/main/res/layout/about_screen_fragment.xml
+++ b/app/src/main/res/layout/about_screen_fragment.xml
@@ -1,51 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/about_constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
     android:orientation="vertical"
     tools:context=".view.AboutScreenFragment">
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/_about_textview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:text="@string/about_ipdata"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/location_info_cardview"
-            style="@style/Widget.MaterialComponents.CardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:elevation="2dp"
-            app:cardCornerRadius="4dp">
-
-            <TextView
-                android:id="@+id/about_ipdata_textview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/about_ipdata"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/educational_cardview"
-            style="@style/Widget.MaterialComponents.CardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:elevation="2dp"
-            app:cardCornerRadius="4dp">
-
-            <TextView
-                android:id="@+id/educational_textview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/education_use_only"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-        </com.google.android.material.card.MaterialCardView>
-
-
-
-</LinearLayout>
+    </com.google.android.material.textview.MaterialTextView>
+</androidx.constraintlayout.widget.ConstraintLayout>
