--- a/app/src/main/res/layout/result_screen_fragment.xml
+++ b/app/src/main/res/layout/result_screen_fragment.xml
@@ -28,7 +28,7 @@
                 style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
+                android:layout_margin="6dp"
                 android:elevation="4dp"
                 app:cardCornerRadius="4dp">
 
@@ -37,7 +37,8 @@
                     android:id="@+id/map_constraintlayout"
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
-                    android:layout_margin="4dp">
+                    tools:layout_editor_absoluteX="4dp"
+                    tools:layout_editor_absoluteY="4dp">
 
 
                     <com.google.android.material.imageview.ShapeableImageView
@@ -119,7 +120,7 @@
                 style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
+                android:layout_margin="6dp"
                 android:elevation="2dp"
                 app:cardCornerRadius="4dp">
 
@@ -174,7 +175,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/ip_address"
                         app:layout_constraintEnd_toStartOf="@+id/ip_input"
@@ -187,7 +188,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/threat"
                         app:layout_constraintEnd_toStartOf="@+id/threat_input"
@@ -210,7 +211,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/proxy"
                         app:layout_constraintEnd_toStartOf="@+id/proxy_input"
@@ -233,7 +234,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/isp"
                         app:layout_constraintEnd_toStartOf="@+id/isp_input"
@@ -256,7 +257,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/city"
                         app:layout_constraintEnd_toStartOf="@+id/city_input"
@@ -279,7 +280,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/region"
                         app:layout_constraintEnd_toStartOf="@+id/region_input"
@@ -302,7 +303,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/country"
                         app:layout_constraintEnd_toStartOf="@+id/country_input"
@@ -325,7 +326,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/continent"
                         app:layout_constraintEnd_toStartOf="@+id/continent_input"
@@ -348,7 +349,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/postal_code"
                         app:layout_constraintEnd_toStartOf="@+id/postalcode_input"
@@ -371,7 +372,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/language"
                         app:layout_constraintEnd_toStartOf="@+id/language_input"
@@ -394,7 +395,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/currency"
                         app:layout_constraintEnd_toStartOf="@+id/currency_input"
@@ -417,7 +418,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/current_time"
                         app:layout_constraintEnd_toStartOf="@+id/currenttime_input"
@@ -441,7 +442,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="16dp"
-                        android:paddingStart="8dp"
+                        android:paddingStart="16dp"
                         android:paddingEnd="8dp"
                         android:text="@string/timezone"
                         app:layout_constraintBottom_toBottomOf="parent"
