--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jeff.iplocator.view.MainActivity">
+    tools:context="com.brown.jeff.iplocator.view.MainActivity">
 
     <fragment
         android:id="@+id/fragment"
