--- a/app/src/main/res/layout/result_screen_fragment.xml
+++ b/app/src/main/res/layout/result_screen_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    tools:context="com.example.jeff.iplocator.view.ResultScreenFragment">
+    tools:context="com.brown.jeff.iplocator.view.ResultScreenFragment">
 
     <ScrollView
         android:id="@+id/searchscreen_scrollview"
